# autoresearch

./: .gitignore  AGENTS.md  README.md
async-rl/: .dockerignore  Dockerfile  PROGRAM.md  README.md  async_rl_config.py  fully_async_rollout.py  prepare.py  train.py
async-rl/experiments/: README.md
nanochat/: .dockerignore  Dockerfile  PROGRAM.md  README.md  analysis.ipynb  eval_suite.py  pyproject.toml  train.py
nanochat/experiments/: README.md
nanochat/experiments/may6-sweep/: results.tsv
nanochat/experiments/may8-seqlen/: results.tsv
